<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FleetSpeak</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_server"> New Server</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="volume">Volume</string>
    <string name="password">Password</string>
    <string name="create_room_text">Create Room</string>
    <string name="server_name_text">Server name</string>
    <string name="ip_adress_text">IP adress</string>
    <string name="port_number_text">Port number</string>
    <string name="auto_connect_text">Auto Connect</string>
    <string name="save_bookmark_text">Save bookmark</string>
    <string name="connect_text">Connect</string>
    <string name="save_preferences_text">Save preferences</string>
    <string name="username_text">Username</string>
    <string name="connection_error">Connection Error</string>
    <string name="volume_mic_control">volume and mic control</string>
    <string name="save_preferences">Save preferences</string>
    <string name="title_activity_main_fragment">FleetSpeaky</string>
    <string name="title_activity_login">Fleetspeak</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_connection">FleetSpeak</string>
    <string name="error_code">Error Code</string>
    <string name="EmptyRoomList">There are no rooms available</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AboutToDisconnect">You are about to leave, are you sure?</string>
    <string name="title_activity_establish_connection">EstablishConnectionActivity</string>

</resources>
