<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="left|top"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="left|top"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_above="@+id/button">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:layout_weight="0.1"
        android:linksClickable="false"
        android:hint="@string/server_name_text"
        android:textSize="24dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextIP"
        android:layout_weight="0.1"
        android:linksClickable="false"
        android:hint="@string/ip_adress_text"
        android:textSize="24dp"/>

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/editTextPort"
        android:layout_weight="0.1"
        android:linksClickable="false"
        android:hint="@string/port_number_text"
        android:textSize="24dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingTop="30dp"
        android:text="@string/auto_connect_text"
        android:id="@+id/checkBox_AutoConnect"
        android:textSize="24dp"
        android:layout_weight="0.3"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_bookmark_text"
        android:padding="10dp"
        android:layout_weight="0.3"
        android:id="@+id/checkBox_BookmarkThis"
        android:textSize="24dp"
        android:checked="true"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_text"
        android:layout_weight="0.2"
        android:textSize="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button"/>
</RelativeLayout>
