<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.chalmers.fleetspeak.fragments.NewStructure.EstablishConnection.BackFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AboutToDisconnect"
        android:id="@+id/textView2"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="137dp"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/special_button_shape2"
        android:text="@string/yes"
        android:layout_marginRight="30dp"
        android:id="@+id/yesButton"
        android:layout_alignTop="@+id/noButton"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/special_button_shape2"
        android:text="@string/no"
        android:id="@+id/noButton"
        android:layout_marginBottom="127dp"
        android:layout_marginLeft="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
